--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -26,8 +26,39 @@
 a {
   text-decoration: none;
   color: inherit;
+  &:hover {
+    color: skyblue;
+  }
 }
 
-a:hover {
-  color: skyblue;
+@mixin hero-button {
+  padding: 16px 48px;
+  text-align: center;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  //   margin: none;
+  font: {
+    weight: 500;
+    size: 1.25rem;
+  }
+
+  &:hover {
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+      0 8px 10px -6px rgb(0 0 0 / 0.1);
+  }
+}
+
+.button-primary {
+  @include hero-button;
+  background: $secondary;
+  color: $primary;
+  //   padding: 16px 16px;
+}
+.button-secondary {
+  @include hero-button;
+  background: none;
+  color: $secondary;
+  border: 2px solid $secondary;
+  margin-right: 20px;
 }
