--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: $body;
 }
 
@@ -17,10 +18,7 @@
 
 .container {
   max-width: 1280px;
-  margin: {
-    left: auto;
-    right: auto;
-  }
+  margin: 8rem auto;
 }
 
 a {
@@ -61,4 +59,25 @@ a {
   color: $secondary;
   border: 2px solid $secondary;
   margin-right: 20px;
+}
+
+@mixin flex-align {
+  display: flex;
+  align-items: center;
+}
+
+@mixin h1-sub {
+  .head {
+    font: {
+      family: $headline;
+      size: 3rem;
+    }
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+
+  .subhead {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 }
