--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -21,6 +21,11 @@
   margin: 8rem auto;
 }
 
+p {
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+
 a {
   text-decoration: none;
   color: inherit;
