--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,7 +70,8 @@ header {
   @include h1-sub;
 
   .cards {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 
     .card {
@@ -127,6 +128,116 @@ header {
   }
 }
 
+// .featured-services {
+//   @include h1-sub;
+// }
+
 .featured-services {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.25rem;
+  // @include flex-align;
+  .ft-headline {
+    @include flex-align;
+    gap: 1.25rem;
+
+    hr {
+      border: 2px solid $primary;
+      width: 160px;
+    }
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+    .card {
+      text-align: center;
+      border: 1px solid $primary;
+      border-radius: 1rem;
+      padding: 3rem 0;
+
+      img {
+        margin-bottom: 1rem;
+      }
+    }
+  }
+}
+
+.testimonial {
   @include h1-sub;
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+    .card {
+      text-align: center;
+      border: 1px solid $primary;
+      border-radius: 1rem;
+      padding: 20px;
+    }
+  }
+}
+
+.contact {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+  // background-color: rgba(105, 90, 205, 0.4);
+
+  // background-color: $primary;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 1.5rem;
+
+    input,
+    textarea {
+      padding: 20px;
+      border-radius: 1rem;
+      font-size: 1.125rem;
+      border: 1px solid $primary;
+
+      &:focus {
+        border: none;
+        outline: none;
+        border: 2px solid $primary;
+      }
+    }
+  }
+  .accordion-item {
+    margin-top: 24px;
+    border-radius: 1rem;
+    border: 1px solid $primary;
+    overflow: hidden;
+
+    .accordion-header {
+      // border-radius: 1rem 1rem 0 0;
+      padding: 20px;
+      @include flex-align;
+      justify-content: space-between;
+      background-color: $primaryLight;
+      h3 {
+        font-weight: 600;
+        font-size: 1.5rem;
+        line-height: 0;
+      }
+      button {
+        border: none;
+        background: none;
+        font-size: 2rem;
+      }
+    }
+    .accordion-content {
+      display: none;
+    }
+  }
+}
+.accordion-item.active .accordion-content {
+  display: block;
+  padding: 20px;
 }
