--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&family=Poppins:wght@400;500;600;700&display=swap");
-
+@import "reset";
 @import "variables";
 @import "utilities";
 
@@ -135,15 +135,41 @@ header {
 .featured-services {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.25rem;
+  gap: 4rem;
   // @include flex-align;
-  .ft-headline {
-    @include flex-align;
-    gap: 1.25rem;
 
-    hr {
-      border: 2px solid $primary;
-      width: 160px;
+  .contents {
+    .ft-headline {
+      @include flex-align;
+      gap: 1.25rem;
+
+      hr {
+        border: 2px solid $primary;
+        width: 160px;
+      }
+      h2 {
+        color: $primary;
+        font-weight: 600;
+        font-size: 2rem;
+        margin-bottom: 8px;
+      }
+    }
+
+    .head {
+      font-size: 3.5rem;
+      font-weight: 600;
+      font-family: $headline;
+      line-height: 1.3;
+      margin-bottom: 2.5rem;
+    }
+
+    .subhead {
+      margin-bottom: 1.5rem;
+      font-size: 1.25rem;
+    }
+    button {
+      background-color: $primary;
+      color: $secondary;
     }
   }
 
@@ -156,10 +182,17 @@ header {
       text-align: center;
       border: 1px solid $primary;
       border-radius: 1rem;
-      padding: 3rem 0;
+      // margin: auto;
+      padding: 3.25rem 0;
 
       img {
         margin-bottom: 1rem;
+      }
+      h3 {
+        color: $primary;
+        font-weight: 600;
+        font-size: 1.5rem;
+        margin-top: 1rem;
       }
     }
   }
@@ -180,6 +213,12 @@ header {
       padding: 20px;
     }
   }
+}
+
+.contact-holder {
+  background-color: $primaryLight;
+  // background: red;
+  padding: 1rem 0;
 }
 
 .contact {
@@ -214,13 +253,15 @@ header {
     border-radius: 1rem;
     border: 1px solid $primary;
     overflow: hidden;
+    background-color: white;
 
     .accordion-header {
       // border-radius: 1rem 1rem 0 0;
+      background-color: white;
       padding: 20px;
       @include flex-align;
       justify-content: space-between;
-      background-color: $primaryLight;
+      // background-color: $primaryLight;
       h3 {
         font-weight: 600;
         font-size: 1.5rem;
