--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,6 @@
 }
 
 header {
-  //   background-color: $accent;
   max-width: 1280px;
   margin: 0 auto;
   padding: 24px 0;
@@ -19,10 +18,7 @@ header {
     justify-content: space-between;
 
     h2 {
-      font: {
-        family: $headline;
-        size: 2.5rem;
-      }
+      margin: 0;
     }
   }
 
@@ -40,26 +36,14 @@ header {
 
 .hero {
   @include flex-align;
+  justify-content: space-between;
   max-width: 1280px;
   margin: 0 auto;
-  // place-items: center;
-  // place-content: center;
   gap: 100px;
-  justify-content: space-between;
   min-height: 80vh;
 
-  h1 {
-    font: {
-      family: $headline;
-      size: 3rem;
-    }
-    line-height: 1.2;
-    margin-bottom: 24px;
-  }
   p {
-    font-size: 1.125rem;
     margin-bottom: 48px;
-    line-height: 1.6;
   }
   img {
     width: 40%;
@@ -79,6 +63,11 @@ header {
       padding: 1.5rem;
       border-radius: 16px;
       border: 1px solid $primary;
+
+      &:hover {
+        background-color: $primary;
+        color: $secondary;
+      }
 
       img {
         display: block;
@@ -116,42 +105,29 @@ header {
 
   .card {
     @include flex-align;
-    // display: flex;
     align-items: flex-start;
     gap: 1rem;
-
-    h3 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
   }
 }
-
-// .featured-services {
-//   @include h1-sub;
-// }
 
 .featured-services {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 4rem;
-  // @include flex-align;
 
   .contents {
     .ft-headline {
       @include flex-align;
       gap: 1.25rem;
+      margin-bottom: 1.5rem;
 
       hr {
-        border: 2px solid $primary;
+        border: 1px solid $primary;
         width: 160px;
       }
       h2 {
         color: $primary;
-        font-weight: 600;
-        font-size: 2rem;
-        margin-bottom: 8px;
+        margin-bottom: 0;
       }
     }
 
@@ -182,18 +158,46 @@ header {
       text-align: center;
       border: 1px solid $primary;
       border-radius: 1rem;
-      // margin: auto;
       padding: 3.25rem 0;
 
+      &:hover {
+        background-color: $primary;
+        color: $secondary;
+      }
       img {
         margin-bottom: 1rem;
       }
-      h3 {
-        color: $primary;
-        font-weight: 600;
-        font-size: 1.5rem;
+      h2 {
+        margin: 0;
         margin-top: 1rem;
+        // margin-bottom: 0;
       }
+    }
+  }
+}
+
+.achievements {
+  padding: 0.5rem;
+  .container {
+    @include flex-align;
+    justify-content: space-between;
+  }
+  // border-radius: 1rem;
+
+  background: $primary;
+  color: $secondary;
+
+  .vertical-line {
+    border-left: 2px solid $secondary;
+    height: 40px;
+    width: 2px;
+  }
+
+  .card {
+    text-align: center;
+
+    h3 {
+      font-size: 3rem;
     }
   }
 }
@@ -217,7 +221,6 @@ header {
 
 .contact-holder {
   background-color: $primaryLight;
-  // background: red;
   padding: 1rem 0;
 }
 
@@ -225,9 +228,6 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 24px;
-  // background-color: rgba(105, 90, 205, 0.4);
-
-  // background-color: $primary;
   form {
     display: flex;
     flex-direction: column;
@@ -253,19 +253,16 @@ header {
     border-radius: 1rem;
     border: 1px solid $primary;
     overflow: hidden;
-    background-color: white;
+    background-color: $secondary;
 
     .accordion-header {
-      // border-radius: 1rem 1rem 0 0;
-      background-color: white;
-      padding: 20px;
       @include flex-align;
+      background-color: $secondary;
+      padding: 20px;
       justify-content: space-between;
-      // background-color: $primaryLight;
       h3 {
-        font-weight: 600;
-        font-size: 1.5rem;
-        line-height: 0;
+        margin-bottom: 0;
+        line-height: 1.6;
       }
       button {
         border: none;
@@ -274,6 +271,7 @@ header {
       }
     }
     .accordion-content {
+      border-top: 1px solid $primary;
       display: none;
     }
   }
