--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,5 +3,16 @@ $primaryLight: #d4cdff66;
 $secondary: white;
 $accent: purple;
 
+$primary-blue-100: #eceeff;
+$primary-blue-200: #daddff;
+$primary-blue-300: #b4bbff;
+$primary-blue-400: #8f99ff;
+$primary-blue-500: #6977ff;
+$primary-blue-600: #4455ff;
+$primary-blue-700: #3644cc;
+$primary-blue-800: #293399;
+$primary-blue-900: #1b2266;
+$primary-blue-950: #0e1133;
+
 $headline: "Playfair Display", serif;
 $body: "Poppins", sans-serif;
