--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -80,7 +80,7 @@ a {
 
 .button-primary {
   @include hero-button;
-  background: $secondary;
+  @include set-bg-color($secondary);
   color: $primary;
 }
 .button-secondary {
@@ -88,7 +88,6 @@ a {
   background: none;
   color: $secondary;
   border: 2px solid $secondary;
-  margin-right: 20px;
 }
 
 @mixin flex-align($align: center) {
