--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,14 +38,20 @@ header {
   justify-content: space-between;
   max-width: 1280px;
   margin: 0 auto;
+  padding: 10rem 0;
   gap: 100px;
-  min-height: 80vh;
+  // min-height: 80vh;
 
   p {
-    margin-bottom: 48px;
+    margin-bottom: 3rem;
   }
   img {
     width: 40%;
+  }
+  .btn-container {
+    display: flex;
+    gap: 1.25rem;
+    // @include flex-align;
   }
 }
 
@@ -312,3 +318,6 @@ footer {
     }
   }
 }
+
+@import "mobile";
+@import "tablet";
