--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -133,3 +133,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
