--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -7,8 +7,7 @@ footer {
 }
 
 html {
-  background-color: $bg-color;
-  color: $text-color;
+  @include set-bg-color($bg-color);
 }
 
 .container {
@@ -60,21 +59,25 @@ a {
   }
 }
 
-@mixin hero-button {
-  padding: 16px 48px;
-  text-align: center;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  //   margin: none;
-  font: {
-    weight: 500;
-    size: 1.25rem;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 1.5rem;
 
-  &:hover {
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
-      0 8px 10px -6px rgb(0 0 0 / 0.1);
+  input,
+  textarea {
+    @include set-bg-color($white);
+    padding: 20px;
+    border-radius: 1rem;
+    font-size: 1.125rem;
+    border: 1px solid $primary;
+
+    &:focus {
+      border: none;
+      outline: none;
+      border: 2px solid $primary;
+    }
   }
 }
 
@@ -88,27 +91,6 @@ a {
   background: none;
   color: $secondary;
   border: 2px solid $secondary;
-}
-
-@mixin flex-align($align: center) {
-  display: flex;
-  align-items: $align;
-}
-
-@mixin h1-sub {
-  .head {
-    font: {
-      family: $headline;
-      size: 3rem;
-    }
-    text-align: center;
-    margin-bottom: 0.5rem;
-  }
-
-  .subhead {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
 }
 
 .card {
